--- a/docs/partials/copyright.html
+++ b/docs/partials/copyright.html
@@ -28,7 +28,7 @@
       <a class="site-footer__link" href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
 
       <div class="site-footer__tiny">
-        Documentation baseline: MkDocs Material
+        Documentation baseline: Lectron Doc Center
       </div>
     </div>
 
